--- a/public/components/menu/menu.html
+++ b/public/components/menu/menu.html
@@ -1,4 +1,4 @@
-<div>
+<div class="full">
     <nav class="navbar">
         <div class="header-button button-shelf">
             <i class="fa fa-bars button-icon"></i>
@@ -12,5 +12,5 @@
             </div>
         </div>
     </nav>
-    <div ui-view></div>
+    <div class="full" ui-view></div>
 </div>
